java lab6 some changes